--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 body {
   margin: 0;
+  font-family: 'New Super Mario Font U', sans-serif;
 }
 
 .grid {
@@ -21,7 +22,7 @@ body {
   transition: all 0.4s linear;
   transform-style: preserve-3d;
   margin: 5px;
-  cursor: url("../src/images/mariocursor.cur"), auto;
+  cursor: url('../src/images/mariocursor.cur'), auto;
 }
 
 .card,
@@ -39,8 +40,8 @@ body {
 
 .front {
   z-index: 2;
-  background: #fab942 url("../src/images/question.gif") no-repeat center center /
-    contain;
+  background: #fab942 url('../src/images/question.gif') no-repeat
+    center center / contain;
 }
 
 .back {
@@ -56,5 +57,6 @@ body {
 }
 
 .match .front {
-  background: url("../src/images/1up.png") no-repeat center center / contain !important;
+  background: url('../src/images/1up.png') no-repeat center center /
+    contain !important;
 }
